Prepare for deployment

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dice-game-server",
+  "name": "dice-game-backend",
   "version": "1.0.0",
   "description": "Backend for the dice game",
   "main": "index.js",
